apps/services/notify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify
  template:
    metadata:
      labels:
        app: notify
    spec:
      imagePullSecrets:
        - name: github-credentials
      containers:
        - name: notify
          image: ghcr.io/recomendapp/notify@sha256:3af41699bfceefb54847a398f25ade61ba2e4d4cd085cc1c595bcefe9228babb
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
