apps/services/notify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notify
spec:
  selector:
    app: notify
  ports:
    - port: 80
      targetPort: 3000
