apps/services/notify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notify
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - notify.recomend.app
      secretName: notify-tls
  rules:
    - host: notify.recomend.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notify
                port:
                  number: 80
